@@ -3,6 +3,11 @@ HISTORY
 
 History of changes to PHC (name of developer listed in brackets)::
 
+    UNRELEASED
+    
+    - Respect exclude_from_nav setting in the reference manual
+      table of contents generation [miohtama]
+
     PloneHelpCenter 3.0b3
 
     - Mark search results elements with their workflow state to make
